Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_knowledgegraphapi.yml
+++ b/.github/workflows/main_knowledgegraphapi.yml
@@ -49,9 +49,7 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
-
+    
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
@@ -62,17 +60,10 @@ jobs:
         run: unzip release.zip
 
       
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_5E2B6ABDF7FF48588D8A738F0C58374C }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_2EE922ABBF564C2883E17E7203AD371F }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_B1BF7B47711449B5A8E184590D916253 }}
-
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
         with:
           app-name: 'KnowledgeGraphAPI'
           slot-name: 'Production'
-          
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_9B75124C3A534E528F8B297B4FC47965 }}
